Atualização do Aplication.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=Biblioteca
+
+spring.datasource.url=jdbc:mysql://localhost:3306/biblio_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
