--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/biblio_db?createDatabaseIfNotE
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.cache=false
+
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
