--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Biblioteca
 
-spring.datasource.url=jdbc:mysql://localhost:3306/biblio_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/biblio_db?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 
