--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.logback-extensions</groupId>
+			<artifactId>logback-ext-loggly</artifactId>
+			<version>0.1.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
