--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#logging.loggly.token=5ae30fc3-6135-4278-8591-f71d87c80b6d
+# 5ae30fc3-6135-4278-8591-f71d87c80b6d
+#7da45f7b-b10f-430f-af6e-5a04ed838947
